--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@ body {
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  background-color: #111;
+  background-color: #11233B;
 }
 
 * {
@@ -69,7 +69,7 @@ button {
   top: 0;
   left: 0;
   backface-visibility: hidden;
-  background-color: #111;
+  background-color: #11233B;
   color: #fff;
   font-size: 50px;
   transform: translate(0, 0);
@@ -84,5 +84,5 @@ button {
 
 .non-active {
   transform: translate(0, -100vh);
-  background-color: rgb(17, 17, 17);
+  background-color: #11233B;
 }
